# sfm

./: CONTRIBUTORS.txt  README.md  meson.build  pyproject.toml
.github/workflows/: build_lock.yaml  sdist.yaml  update_version.yaml  wheels.yaml  windows_arm_build.yaml
doc/: conf.py
skfmm/: __init__.py  fmm.cpp  pfmm.py  test_regression.py  test_sm.py
