[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'wheel', 'numpy']

[project]
name = 'sfm'
version = '2025.06.16'
description = 'An extension module implementing the fast marching method'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE.txt'}
url = 'https://github.com/Slw-S/sfm'
authors = [
  {name = 'Sylvester S', email = 'slwsz3@gproton.me'},
]
keywords         = ['fast marching method', 'Eikonal equation', 'interface', 'boundary']
classifiers      = ["Development Status :: 5 - Production/Stable",
                    "License :: OSI Approved :: BSD License",
                    "Operating System :: OS Independent",
                    "Topic :: Scientific/Engineering",
                    "Intended Audience :: Science/Research",
                    "Programming Language :: C++",
                    "Programming Language :: Python :: 3"]
